force-app/main/default/objects/Data_Summary__c/Data_Summary__c.object-meta.xml
<CustomObject>
    <label>Data Summary Task</label>
    <nameField>
        <displayFormat>ds-{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Summary Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>