force-app/main/default/objects/Data_Summary__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>This acts as an on/off switch allowing you to configure and test tasks before they go live.  When you click Run Summary Now the task will run even if inactive.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>