force-app/main/default/objects/Data_Summary__c/fields/Active_Fields__c.field-meta.xml
<CustomField>
    <fullName>Active_Fields__c</fullName>
    <inlineHelpText>Shows the number of fields configured for this task (see below) where the Field Status is &quot;Ready&quot; (automatic)</inlineHelpText>
    <label>Active Fields</label>
    <summaryFilterItems>
        <field>Data_Summary_Field__c.Field_Status__c</field>
        <operation>equals</operation>
        <value>Ready</value>
    </summaryFilterItems>
    <summaryForeignKey>Data_Summary_Field__c.Summary__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>