force-app/main/default/objects/Data_Summary__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>25</defaultValue>
    <inlineHelpText>The number of records of the Parent Object that are processed at a time. In contrast, the system pulls all child records that are applicable for the selected analysis timeframe.  When in doubt, stay with the default value of 50</inlineHelpText>
    <label>Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>