force-app/main/default/objects/Data_Summary__c/fields/Child_Object__c.field-meta.xml
<CustomField>
    <fullName>Child_Object__c</fullName>
    <label>Child Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>