force-app/main/default/objects/Data_Summary__c/fields/Clear_Outliers__c.field-meta.xml
<CustomField>
    <fullName>Clear_Outliers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Let&apos;s say you&apos;re tracking the number of opps created this month for an account.  If an account had just one opp created during the month and that opp was subsequently deleted, still during the month, the count could be wrong.  Setting this true, clears them out.  Set this false you have multiple tasks touching the same fields otherwise your data may be fouled.  USE ONLY IN SIMPLE SITUATIONS.  WHEN IN DOUBT, LEAVE BLANK.  See documentation at http://LeftPropeller.com/DSS</inlineHelpText>
    <label>Clear Outliers When Done (see help)</label>
    <type>Checkbox</type>
</CustomField>