force-app/main/default/objects/Data_Summary__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <formula>if ( Snapshot_Mode__c , &apos;Summarizing to snapshot object: &apos; + Snapshot_Object__c, &apos;Summarizing to parent object: &apos; + Parent_Object__c ) 
+ if ( Echo_Mode__c, &apos; -- ECHO Only&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A brief English language description of task the configuration (automatic)</inlineHelpText>
    <label>Comment</label>
    <type>Text</type>
</CustomField>