force-app/main/default/objects/Data_Summary__c/fields/Date_Field_on_Child_Record__c.field-meta.xml
<CustomField>
    <fullName>Date_Field_on_Child_Record__c</fullName>
    <inlineHelpText>The field on the child record containing the date to base the analysis on</inlineHelpText>
    <label>Date Field on Child Record</label>
    <length>255</length>
    <type>Text</type>
</CustomField>