force-app/main/default/objects/Data_Summary__c/fields/debug_Parent_Query__c.field-meta.xml
<CustomField>
    <fullName>debug_Parent_Query__c</fullName>
    <label>debug: Parent Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>