force-app/main/default/objects/Data_Summary__c/fields/Delay_Days__c.field-meta.xml
<CustomField>
    <fullName>Delay_Days__c</fullName>
    <label>Delay - Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>