force-app/main/default/objects/Data_Summary__c/fields/Echo_Mode__c.field-meta.xml
<CustomField>
    <fullName>Echo_Mode__c</fullName>
    <formula>if (  !isblank(Parent_Object__c) &amp;&amp; ( isblank(Child_Object__c) || lower(Parent_Object__c) = lower(Child_Object__c)), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Echo Mode</label>
    <type>Checkbox</type>
</CustomField>