force-app/main/default/objects/Data_Summary__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Analysis Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily - Current</fullName>
            </value>
            <value>
                <fullName>Daily - Previous</fullName>
            </value>
            <value>
                <fullName>Monthly - Current</fullName>
            </value>
            <value>
                <fullName>Monthly - Previous</fullName>
            </value>
            <value>
                <fullName>Quarterly - Current</fullName>
            </value>
            <value>
                <fullName>Quarterly - Previous</fullName>
            </value>
            <value>
                <fullName>Yearly - Current</fullName>
            </value>
            <value>
                <fullName>Yearly - Previous</fullName>
            </value>
            <value>
                <fullName>FY - Current</fullName>
            </value>
            <value>
                <fullName>FY - Previous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>