force-app/main/default/objects/Data_Summary__c/fields/Last_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed__c</fullName>
    <label>Last Completed</label>
    <type>DateTime</type>
</CustomField>