force-app/main/default/objects/Data_Summary__c/fields/Last_Started__c.field-meta.xml
<CustomField>
    <fullName>Last_Started__c</fullName>
    <inlineHelpText>The date/time when the task last started</inlineHelpText>
    <label>Last Started</label>
    <type>DateTime</type>
</CustomField>