force-app/main/default/objects/Data_Summary__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <inlineHelpText>The object that serves as the &quot;root&quot; of all data to be analyzed.  Often this will be the Contact object</inlineHelpText>
    <label>Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>