force-app/main/default/objects/Data_Summary__c/fields/Process_Data__c.field-meta.xml
<CustomField>
    <fullName>Process_Data__c</fullName>
    <inlineHelpText>If you choose Match Analysis Timeframe and the Analysis Timeframe is Monthly – Current, it’ll run the analysis at the end of every month.  If, however, you set it to Daily, it’ll run the analysis every day of the month, storing it to the end of month record.  While the results will be the same once the month is done, the Daily setting shows you a month-to-date summary as the month progresses where Match just shows you the data once the month is over.</inlineHelpText>
    <label>Process Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Match Analysis Timeframe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>