force-app/main/default/objects/Data_Summary__c/fields/Relationship_Field_Child__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field_Child__c</fullName>
    <label>Relationship Field (on Child)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>