force-app/main/default/objects/Data_Summary__c/fields/Relationship_Field_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field_Snapshot__c</fullName>
    <inlineHelpText>The field on the Snapshot Object that relates it to the Parent Object (automatic)</inlineHelpText>
    <label>Relationship Field (on Snapshot)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>