force-app/main/default/objects/Data_Summary__c/fields/Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Run_Status__c</fullName>
    <formula>if ( !isblank(Last_Started__c) &amp;&amp; ( isblank(Last_Completed__c) || Last_Started__c &gt; Last_Completed__c), &apos;Running&apos;, if ( Last_Started__c &lt;= Last_Completed__c, &apos;Completed&apos;, &apos;Never Run&apos; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Run</label>
    <type>Text</type>
</CustomField>