force-app/main/default/objects/Data_Summary__c/fields/Snapshot_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_As_Of_Date__c</fullName>
    <label>Snapshot As Of Date (blank for auto)</label>
    <type>Date</type>
</CustomField>