force-app/main/default/objects/Data_Summary__c/fields/Snapshot_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date_Field__c</fullName>
    <label>Snapshot Date Field (on snapshot object)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>