force-app/main/default/objects/Data_Summary__c/fields/Snapshot_Date_Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date_Field_Type__c</fullName>
    <label>Snapshot Date Field Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>