force-app/main/default/objects/Data_Summary__c/fields/Snapshot_Mode__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Mode__c</fullName>
    <formula>if ( isblank(Snapshot_Object__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Snapshot Mode</label>
    <type>Checkbox</type>
</CustomField>