force-app/main/default/objects/Data_Summary__c/fields/Snapshot_Object__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Object__c</fullName>
    <inlineHelpText>The object where snapshots will be created</inlineHelpText>
    <label>Snapshot Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>