force-app/main/default/objects/Data_Summary__c/fields/Snapshot_Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Relationship_Name__c</fullName>
    <label>Snapshot Relationship Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>