force-app/main/default/objects/Data_Summary__c/fields/Task_Priority__c.field-meta.xml
<CustomField>
    <fullName>Task_Priority__c</fullName>
    <label>Task Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - High</fullName>
            </value>
            <value>
                <fullName>2 - Normal</fullName>
                <default>true</default>
                <label>2 - Normal</label>
            </value>
            <value>
                <fullName>3 - Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>