force-app/main/default/objects/Data_Summary__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Timeframe</fullName>
                <default>true</default>
                <label>Current Timeframe</label>
            </value>
            <value>
                <fullName>Previous Timeframe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>