force-app/main/default/objects/Data_Summary__c/fields/Tips__c.field-meta.xml
<CustomField>
    <fullName>Tips__c</fullName>
    <formula>if (  !CONTAINS(Child_Object__c, &apos;__c&apos;) , &apos;Some standard objects, notably Tasks, are very limited in how you can use them in a where clause&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tips</label>
    <type>Text</type>
</CustomField>