force-app/main/default/objects/Data_Summary__c/fields/Where_Clause__c.field-meta.xml
<CustomField>
    <fullName>Where_Clause__c</fullName>
    <label>Where Clause (filters child obj records)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>